bin/docker/k8s/legacy-ingress/countly-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: userovo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # userovo.example.com
    secretName: userovo-tls
  rules:
  - http:
      paths:
      - path: /i
        backend:
          serviceName: userovo-api
          servicePort: 3001
      - path: /i/*
        backend:
          serviceName: userovo-api
          servicePort: 3001
      - path: /o
        backend:
          serviceName: userovo-api
          servicePort: 3001
      - path: /o/*
        backend:
          serviceName: userovo-api
          servicePort: 3001
      - path: /*
        backend:
          serviceName: userovo-frontend
          servicePort: 6001
